--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section class="container">
     <div class="row">
 
-      <div id="sprint" class="panel panel-default col-lg-6 col-md-6">
+      <div id="sprint-back" class="panel panel-default col-lg-6 col-md-6">
         <h2 class="panel-heading">Sprint</h2>
         <div class="panel-body">
 
@@ -36,6 +36,21 @@
             <!-- 100% -->
           </div>
         </div>
+      </div>
+
+      <div id="sprint-front" class="panel panel-default col-lg-6 col-md-6">
+        <h2 class="panel-heading">Sprint</h2>
+        <div class="panel-body">
+          <div class="progress progress-big">
+            <div class="progress-bar" role="progressbar" aria-valuenow="100"
+              aria-valuemin="0" aria-valuemax="100"
+                data-bind="text: sprint.progress() + '% completed',
+                  style: { minWidth: sprint.progress() + '%' }, css: {progressBarBig: true}">
+            </div>
+          </div>
+          <div class="days-left" data-bind="text: sprint.daysLeft() + ' days left'"></div>
+        </div>
+
       </div>
 
       <div id="release" class="panel panel-default col-lg-6 col-md-6">
