feat: Add function to calculate days from now to a due date

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body data-bind="css: {failed: sprint.progress() < 25, danger: sprint.progress() < 50, ok: sprint.progress() <= 75, success: sprint.progress() > 75 }" class="sprint-status">
-  <header>
-    <img src="img/logo-official.jpg" alt="Southwest" class="logo">
+  <header class="container">
+    <img src="img/logo.jpeg" alt="Southwest" class="logo header-content">
     <!-- TODO: add team name to 'Team Board' -->
-    <h2>Team Board</h2>
+    <h2 class="header-content">Team Board</h2>
   </header>
   <section class="container">
     <div class="row">
