--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
       <div id="release" class="panel panel-default col-lg-6 col-md-6">
         <h2 class="panel-heading">Release</h2>
         <div class="panel-body">
-          <p>A</p>
-          <p>B</p>
-          <p>C</p>
+          <h3>Backlog health:</h3>
+          <p> <em class="health-top">40</em><em class="health-bottom">/50</em> estimated stories</p>
         </div>
       </div>
       <div id="code" class="panel panel-default col-lg-6 col-md-6">
