refactor: Remove sprint.indicators obj. Rename sprint._stages.
The object was redundant.
All of the information is available at sprint.stages
(previously sprint._stages).

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="panel-body">
 
           <!-- KO template to show a description list -->
-          <dl class="dl-horizontal" data-bind="foreach: sprint.indicators">
+          <dl class="dl-horizontal" data-bind="foreach: sprint.stages">
             <dt data-bind="text: $data.label"></dt>
-            <dd data-bind="text: $data.value"></dd>
+            <dd data-bind="text: $data.complexityPoints"></dd>
           </dl>
         </div>
 
