--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body data-bind="css: {failed: sprint.progress() < 25, danger: sprint.progress() < 50, ok: sprint.progress() <= 75, success: sprint.progress() > 75 }" class="sprint-status">
+<body class="sprint-status" data-bind="css: {failed: sprint.progress() < 25, danger: sprint.progress() < 50,
+  ok: sprint.progress() <= 75, success: sprint.progress() > 75 }">
   <header class="container">
     <img src="img/logo.jpeg" alt="Southwest" class="logo header-content">
     <!-- TODO: add team name to 'Team Board' -->
@@ -45,7 +46,9 @@
             <div class="progress-bar" role="progressbar" aria-valuenow="100"
               aria-valuemin="0" aria-valuemax="100"
                 data-bind="text: sprint.progress() + '% completed',
-                  style: { minWidth: sprint.progress() + '%' }, css: {progressBarBig: true, badProgress: true}">
+                  style: { minWidth: sprint.progress() + '%' },
+                  css: {progressBarBig: true, idealProgress: sprint.isExpectedProgress(), okProgress: sprint.isOKProgress(),
+                    badProgress: sprint.isBadProgress(), dangerProgress: sprint.isInDangerProgress()}">
             </div>
           </div>
           <div class="days-left" data-bind="text: sprint.daysLeft() + ' days left'"></div>
