--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 
       <div id="" class="panel panel-default col-lg-5 col-md-5">
         <h2 class="panel-heading">Sprint</h2>
-        <!--TODO: Fix: front and back occupy only half the width each -->
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-          <div class="panel-body">
+        <div class="panel-body">
+          <div id="flip" class="flip-container">
             <div class="flipper">
-
               <div class="front">
                 <div class="progress progress-big">
                   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
