--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <div class="row">
 
       <div id="" class="panel panel-default col-lg-5 col-md-5">
-        <h2 class="panel-heading">Sprint Board</h2>
+        <div class="panel-heading">
+            <h2>Sprint Board</h2>
+        </div>
         <div class="panel-body">
           <div id="flip" class="flip-container">
             <div class="flipper">
-              <div class="front">
+              <div class="back">
                 <div class="progress progress-big">
                   <div class="progress-bar progressBarBig" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
                              data-bind="text: sprint.progress() + '% completed',
@@ -38,9 +40,9 @@
               </div>
 
 
-              <div class="back">
+              <div class="front">
                   <!-- KO template to show a description list -->
-                  <table class="dl-horizontal" data-bind="foreach: sprint.stages">
+                  <table class="table table-condensed" data-bind="foreach: sprint.stages">
                       <tr>
                           <td data-bind="text: $data.label"></td>
                           <td data-bind="text: $data.complexityPoints" class="metric"></td>
@@ -61,7 +63,9 @@
 
 
       <div id="analysis" class="panel panel-default col-lg-5 col-md-5">
-        <h2 class="panel-heading">Analysis Board</h2>
+          <div class="panel-heading">
+              <h2>Analysis Board</h2>
+          </div>
         <div class="panel-body analysis-content">
           <h3>Backlog health:</h3>
           <em class="metric" data-bind="text: analysis.health(), css: {textIdeal: !analysis.failed(), textInDanger: analysis.failed()}">40</em>
@@ -72,7 +76,9 @@
       </div>
 
       <div id="code" class="panel panel-default col-lg-5 col-md-5">
-        <h2 class="panel-heading">Code</h2>
+          <div class="panel-heading">
+              <h2>Code</h2>
+          </div>
         <div class="panel-body">
             <dl class="dl-horizontal">
                 <!--TODO: Add icons and standard colors and sizes to details -->
