--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
   <section class="container">
     <div class="row">
 
-      <div id="" class="panel panel-default col-lg-5 col-md-5">
-        <div class="panel-heading">
+      <div id="" class="panel panel-default col-lg-5 col-md-5"
+           data-bind="css: {boardSuccess: sprint.isExpectedProgress(), boardOk: sprint.isOKProgress(),
+                                        boardBad: sprint.isBadProgress(), boardInDanger: sprint.isInDangerProgress()}">
+        <div data-bind="css: {boardHeaderSuccess: sprint.isExpectedProgress(), boardHeaderOk: sprint.isOKProgress(),
+                                        boardHeaderBad: sprint.isBadProgress(), boardHeaderInDanger: sprint.isInDangerProgress(),
+                                        'panel-heading': sprint.isTooEarly()}">
             <h2>Sprint Board</h2>
         </div>
         <div class="panel-body">
