--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="sprint-status" data-bind="css: {failed: sprint.progress() < 25, danger: sprint.progress() < 50,
   ok: sprint.progress() <= 75, success: sprint.progress() > 75 }">
   <header class="container">
-    <img src="img/logo.jpeg" alt="Southwest" class="logo header-content">
+    <img src="img/logo.png" alt="Southwest" class="logo header-content">
     <!-- TODO: add team name to 'Team Board' -->
     <h2 class="header-content">Team Board</h2>
   </header>
